--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,9 @@
 {
-    "version":2,
-    "builds":[
+    "version": 2,
+    "builds": [
         {
             "src": "app.mjs",
-            "use": "@now/node"
+            "use": "@vercel/node"
         }
     ],
     "routes": [
