--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,7 +9,8 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "app.mjs"
+            "dest": "app.mjs",
+            "methods":["GET", "PUT", "PATCH", "DELETE", "OPTIONS"]
         }
     ]
 }
